<resources>
	<string name="app_name">Custom Calendar</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="monday">M</string>
	<string name="tuesday">T</string>
	<string name="wednesday">W</string>
	<string name="thursday">T</string>
	<string name="friday">F</string>
	<string name="saturday">S</string>
	<string name="sunday">S</string>
</resources>
